 [build-system]
 requires = ["setuptools>=68"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "pymlokit"
 version = "0.0.0"
 description = "Python port of MLOKit (MLOps Attack Toolkit)"
 readme = "MLOKit/README.md"
 requires-python = ">=3.10"
 dependencies = []
 
 [project.optional-dependencies]
 aws = ["boto3>=1.28"]
 
 [project.scripts]
 pymlokit = "pymlokit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymlokit*"]
exclude = ["MLOKit*", "tests*"]
 
